--- a/login-form/src/main/resources/static/index.html
+++ b/login-form/src/main/resources/static/index.html
@@ -19,8 +19,8 @@
         <h2 class="login-header">Log in</h2>
 
         <form method="post" class="login-container">
-            <p><input type="text" name="login" placeholder="login"></p>
-            <p><input type="text" name="password" placeholder="password"></p>
+            <p><input type="text" name="login" required placeholder="login"></p>
+            <p><input type="password" name="password" required placeholder="password"></p>
             <p><input type="submit" name="submit-login" value="Log in"></p>
         </form>
     </div>
